--- a/index.html
+++ b/index.html
@@ -11,24 +11,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-  
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Maninder Pahal</title>
-    <script src="/portfolio/assets/index.js"></script>
-    <link rel="stylesheet" href="/portfolio/assets/index.css">
+    <script type="module" src="./src/index.jsx"></script>
+    <link rel="stylesheet" href="./src/index.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -43,22 +28,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <style>
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
-</style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
-<<<<<<< HEAD
-<script type="module" src="./src/index.jsx"></script>
-=======
-
->>>>>>> ecffb143f74e953aed07b3146ebe2f1768502b78
 </script>
   </body>
 </html>
