--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       content="Web site created using create-react-app"
     />
     <title>Maninder Pahal</title>
-    <script type="module" crossorigin src="./src/index.jsx"></script>
-    <link rel="stylesheet" href="./src/index.css">
+    <script type="module" crossorigin src="/src/index.jsx"></script>
+    <link rel="stylesheet" href="/src/index.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
