--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
@@ -12,7 +11,7 @@
       content="Web site created using create-react-app"
     />
     <title>Maninder Pahal</title>
-    <script type="module" crossorigin src="/src/index.jsx"></script>
+    <script type="module" crossorigin src="/src/index.js"></script>
     <link rel="stylesheet" href="/src/index.css">
   </head>
   <body>
