--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       content="Web site created using create-react-app"
     />
     <title>Maninder Pahal</title>
-    <script type="module" crossorigin src="./src/index.jsx"></script>
+    <script type="module" src="./src/index.jsx"></script>
     <link rel="stylesheet" href="./src/index.css">
   </head>
   <body>
